# imaginedb-engine

./: .gitignore  CMakeLists.txt  README.md
examples/: 1.sql
src/: CMakeLists.txt  CMakeLists.txt.in  main.cpp
src/containers/number/: CMakeLists.txt  number.cpp  number.hpp  operators.cpp  operators.hpp
src/containers/number/tests/: creations.cpp
src/databases/: database.hpp
src/databases/relational/: database.hpp  table.hpp
src/processor/: parser.hpp  processor.cpp  processor.hpp
src/testing/: assert.hpp  debug_tools.hpp  test_helpers.hpp
src/types/: base_type.cpp  base_type.hpp  date.cpp  date.hpp  num.cpp  num.hpp  string.cpp  string.hpp  time.cpp  time.hpp
